--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button{
     height: 40px;
     border-radius: 5px;
     border: none;
-    margin: 5px;
+    margin: 20px 5px;
     text-transform: uppercase;
     font-size: 16px;
 }
